# Chat-App

./: .gitignore  README.md  package-lock.json
react-native-frontend/: .env  .gitignore  README.md  app.config.js  app.json  jsconfig.json  package-lock.json  package.json
react-native-frontend/src/: App.jsx  index.js
react-native-frontend/src/constants/: Colors.js
react-native-frontend/src/contexts/Auth/: AuthProvider.jsx
react-native-frontend/src/navigation/Navigators/: AppNavigator.jsx  TabNavigator.jsx
react-native-frontend/src/navigation/Stacks/: ProtectedStack.jsx  PublicStack.jsx
react-native-frontend/src/navigation/Tabs/: TabNavigator.jsx  TabsConfig.js
react-native-frontend/src/screens/: AuthScreen.jsx  ChatsScreen.jsx  HomeScreen.jsx  ProfileScreen.jsx  SettingsScreen.jsx
react-native-frontend/src/utils/: axiosInstance.js
rust-server/: .env  Cargo.toml  README.md
rust-server/src/: errors.rs  main.rs
rust-server/src/auth/: errors.rs  mappers.rs  mod.rs  models.rs  routes.rs  services.rs
rust-server/src/profile/: mappers.rs  models.rs  routes.rs
rust-server/src/test/: routes.rs
rust-server/src/user/: mappers.rs  mod.rs  models.rs  routes.rs
src/: App.js
src/screens/: AuthScreen.jsx  HomeScreen.jsx
src/utils/: axiosInstance.js
