[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
mongodb = "3.2.4"
rand = "0.8.5"
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
time = "0.3.41"